--- a/07-speed/ReadMe
+++ b/07-speed/ReadMe
@@ -1,3 +1,6 @@
-Speed
+Speed: a game where you type the words before they get to the end of the screen
+The more words you type the more points you get.
+
+
 
 Project by: Josue, Brighton, Christian, Tyler
