Added comments, Tskalka

--- a/07-speed/ReadMe
+++ b/07-speed/ReadMe
@@ -1,5 +1,5 @@
 Speed: a game where you type the words before they get to the end of the screen
-The more words you type the more points you get.
+The more words you type the more points you get. Watch out, you lose points if the words get to the end of the screen.
 
 
 
